# timetable

./: .gitignore  docker-compose-debug.yaml  docker-compose.yaml
api/: .dockerignore  2025 2학기 2,3학년 시간표(시간표조회).xlsx  2025 강의실 2.xlsx  2025 선생님.xlsx  Dockerfile  database.py  main.py  pyproject.toml  upload.py  util.py
api/app/: main.py
api/app/account/: crud.py  router.py
api/app/auth/: crud.py  exceptions.py  model.py  router.py  schemas.py
api/app/core/: config.py  database.py  dependencies.py  exceptions.py  middleware.py  response.py
api/app/sync/: dependencies.py  hooks.py  model.py  schemas.py
api/app/theme/: crud.py  exceptions.py  model.py  router.py  schemas.py
api/app/timetable/: crud.py  exceptions.py  model.py  router.py  schemas.py
api/app/upload/: demo.py  exceptions.py  router.py  schema.py  template.py  upload.py
api/app/util/: common.py
api/auth/: __init__.py  auth.py  auth_token.py  exceptions.py  jwt.py  model.py  router.py
api/core/: dependencies.py  exceptions.py  middleware.py  response.py  types.py
api/demo/: init_db.py  query_identifiers.py
api/log/: logger.py
api/theme/: crud.py  exceptions.py  model.py  router.py  schemas.py
api/upload/: template.py  upload.py
web/: Dockerfile  authClient.js  index.html  nginx.conf  package-lock.json  package.json  script.js  style.css  tsconfig.json  tsconfig.node.json  vite.config.ts
web/login/: index.html  script.js  style.css
web/nginx/: default.conf
web/signup/: index.html  script.js  style.css
web/src/: App.css  App.tsx  index.css  vite-env.d.ts
web/src/api/: api.ts  (+5 more)
(+174 files in other folders)
