[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi[binaries]>=25.1.0",
    "fastapi[standard]>=0.121.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.44",
]
